--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,20 @@
-.main-title {
-    color: rgb(0, 0, 0);
-    border: 4px solid black;
-    padding: 5px;
-    display: inline-block;
-    border-radius: 20px;
+#header {
+    width: 100%;
+    height: 150px;
+    border: 1px solid black;
+}
+
+#main-content {
+    width: 100%;
+    height: 900px;
+    margin: 20px auto;
+    border: 1px solid black;
+    float: left;
+}
+
+#footer {
+    width: 100%;
+    height: 100px;
+    border: 1px solid black;
+    clear: left;
 }
