--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,20 +1,40 @@
+* {
+    box-sizing: border-box;
+}
+
+#container {
+    max-width: 100%;
+    margin: 20px auto;
+    padding: 0 10px;
+}
+
 #header {
     width: 100%;
     height: 150px;
     border: 2px solid black;
 }
 
-#main-content {
-    width: 100%;
-    height: 900px;
-    margin: 20px auto;
+#sidebar { 
+    width: 20%;
+    height: 1200px;
     border: 2px solid black;
     float: left;
+}
+
+#main-contents {
+    width: 75%;
+    height: 1200px;
+    border: 2px solid black;
+    float: right;
 }
 
 #footer {
     width: 100%;
     height: 100px;
     border: 2px solid black;
-    clear: left;
+    clear: both;
+}
+
+h1 {
+    padding: 0px 0px 0px 10px;
 }
