--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,38 +1,32 @@
-* {
+header, sidebar, main, footer {
     box-sizing: border-box;
+    font-size: 30px;
+    font-weight: bold;
+    padding-left: 10px;
+    border: 2px solid black;
 }
 
-#container {
-    max-width: 100%;
-}
-
-#header {
+header {
     width: 100%;
     height: 150px;
-    border: 2px solid black;
+    margin-bottom: 30px;
 }
 
-#sidebar { 
+sidebar { 
     width: 20%;
     height: 1200px;
-    border: 2px solid black;
     float: left;
+    margin-bottom: 30px;
 }
 
-#main-contents {
+main {
     width: 77%;
     height: 1200px;
-    border: 2px solid black;
     float: right;
 }
 
-#footer {
+footer {
     width: 100%;
     height: 100px;
-    border: 2px solid black;
     clear: both;
-}
-
-h1 {
-    padding: 0px 0px 0px 10px;
 }
